<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tweet.It</string>
    <string name="action_settings">Instellingen</string>
    <string name="action_search">Zoeken</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_additem">Voeg een item toe</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Sluiten</string>
    <string name="nav_item_timeline">Timeline</string>
    <string name="nav_item_messages">Messages</string>
    <string name="nav_item_discover">Discover</string>
    <string name="nav_item_activity">Activity</string>
    <string name="nav_item_trending">Trending</string>
    <string name="nav_item_drafts">Drafts</string>
    <string name="nav_item_lists">Lists</string>
    <string name="atsymbol">\u0040</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_header_username">\u0040lfpoelman</string>
    <string name="nav_header_screenname">Lennard Poelman</string>
    <string name="nav_header_counttweetstext">Tweets</string>
    <string name="nav_header_counttweetsdata">17.9K</string>
    <string name="nav_header_countfollowingtext">Following</string>
    <string name="nav_header_countfollowingdata">823</string>
    <string name="nav_header_countfollowerstext">Followers</string>
    <string name="nav_header_countfollowersdata">566</string>

    <!-- navigation drawer item labels -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_timeline</item>
        <item>@string/nav_item_messages</item>
        <item>@string/nav_item_discover</item>
        <item>@string/nav_item_activity</item>
        <item>@string/nav_item_trending</item>
        <item>@string/nav_item_drafts</item>
        <item>@string/nav_item_lists</item>
        <item>@string/nav_item_settings</item>
    </string-array>
    
    <string-array name="tabs">
        <item>6,000      
            Tweets</item>
        <item>999 
            Following</item>
        <item>999 
            Followers</item>
    </string-array>

    <string name="title_timeline">Timeline</string>
    <string name="title_messages">Messages</string>
    <string name="title_discover">Discover</string>
    <string name="title_activity">Activity</string>
    <string name="title_trending">Trending</string>
    <string name="title_drafts">Drafts</string>
    <string name="title_lists">Lists</string>
    <string name="title_settings">Settings</string>

</resources>